--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="scripts/scripts.js" defer></script>
     <title>Unit Converter</title>
 </head>
 <body>
@@ -21,6 +22,29 @@
             <input type="number" class="input" placeholder="Unit to convert from">
             <p class="label">Enter Unit to convert to</p>
             <input type="number" class="input" placeholder="Unit to convert to">
+        </div>
+        <div class="weight">
+            <p class="label">Enter the Weight to convert</p>
+            <input type="number" class="input" placeholder="Enter weight">
+            <p class="label">Enter Unit to convert from</p>
+            <input type="number" class="input" placeholder="Unit to convert from">
+            <p class="label">Enter Unit to convert to</p>
+            <input type="number" class="input" placeholder="Unit to convert to">
+        </div>
+        <div class="temperature">
+            <p class="label">Enter the Temperature to convert</p>
+            <input type="number" class="input" placeholder="Enter temperature">
+            <p class="label">Enter Unit to convert from</p>
+            <input type="number" class="input" placeholder="Unit to convert from">
+            <p class="label">Enter Unit to convert to</p>
+            <input type="number" class="input" placeholder="Unit to convert to">
+        </div>
+
+        <button class="convert-btn">Convert</button>
+
+        <div class="result">
+            <h3 class="result-title">Result of your calculation</h3>
+            <p class="result-value"></p>
         </div>
     </div>
 </body>
