styles updates and added dark mode image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Unit Converter</title>
 </head>
 <body>
+    <button class="dark-btn"><img class="image" src="image/Dark Pic.png" alt="dark mode toggle"></button>
     <div class="box">
         <h2 class="title">Unit Converter</h2>
         <div class="tabs">
